--- a/apigateway/pom.xml
+++ b/apigateway/pom.xml
@@ -74,6 +74,11 @@
 			<groupId>io.zipkin.reporter2</groupId>
 			<artifactId>zipkin-reporter-brave</artifactId>
 		</dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <scope>provided</scope>
+        </dependency>
 
 	</dependencies>
 	<dependencyManagement>
